--- a/www/index.html
+++ b/www/index.html
@@ -23,9 +23,10 @@
         <meta name="format-detection" content="telephone=no" />
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
+		<link rel="stylesheet" type="text/css" href="css/themes/default/jquery.mobile-1.3.2.min.css" />
         <title>Hello World</title>
     </head>
-    <body>
+    <body onload="init()">
         <div class="app">
             <h1>PhoneGap</h1>
             <div id="deviceready" class="blink">
@@ -33,10 +34,58 @@
                 <p class="event received">Device is Ready</p>
             </div>
         </div>
+    <div data-role="page" id="main">
+	<div data-role="header" class="logo">
+		<img src="img/logo.png" />
+	</div>
+	<div data-role="content">
+		<ul id="notelist" data-role="listview">
+
+		</ul>
+
+		<a href="#newnote" data-role="button" data-icon="plus">New Note</a>
+
+	</div>
+
+	<div data-role="footer" data-theme="c">
+		<h2 class="offline">Offline Mode</h2>
+	</div>
+
+</div>    
+	<div data-role="page" id="newnote">
+		<div data-role="header" class="logo">
+			<img src="img/logo.png" />
+		</div>
+		<div id="notedetailcontent" data-role="content">
+		</div>
+		<div data-role="footer" data-theme="c">
+			<p>SnapNote!</p>
+		</div>
+	</div>
+        <script src="js/jquery.js"></script>
+		<script src="js/jquery.mobile-1.3.2.min.js"></script>
         <script type="text/javascript" src="phonegap.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
             app.initialize();
         </script>
+        <script>
+		var notedata = {notetitle:"", notedetail:"", imagesource:"", notelat:"", notelon:""};
+		var notetemplate = '<input type="text" name="notetitle" id="notetitle" value="{{notetitle}}" placeholder="Note Title"/><textarea cols="40" rows="8" name="notedetail" id="notedetail" placeholder="Note Detail">{{notedetail}}</textarea><input id="addphoto" type="button" data-icon="plus" value="Add a Photo" /><img id="noteimage" src="{{imagesource}}" /><div id="map">Map Placeholder</div><input id="savenote" type="button" data-theme="a" value="Save Note" />';
+		$(document).on("pageinit", function(){
+			$("#newnote").live("pagecreate", function(){
+				var html = Mustache.to_html(notetemplate, notedata);
+				$("#notedetailcontent").html(html);
+			});
+		});
+
+		function init() {
+			document.addEventListener("deviceready", onDeviceReady, false);
+		}
+
+		function onDeviceReady() {
+			alert('It works!');
+		}
+	</script>
     </body>
 </html>
